# carla_python_api

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  carla_python_api_deps.bzl
PythonAPI/examples/: automatic_control.py
